recursion.lessons.recursion.koch.PentaKoch.scala.error
PentaKoch:6: error: too many arguments for method pentaKoch: (levels: Int, length: Double)Unit
	pentaKoch(levels-1,length*0,4);
                 ^PentaKoch:8: error: too many arguments for method pentaKoch: (levels: Int, length: Double)Unit
	pentaKoch(levels-1,length*0,4);
                 ^PentaKoch:10: error: too many arguments for method pentaKoch: (levels: Int, length: Double)Unit
	pentaKoch(levels-1,length*0,4);
                 ^PentaKoch:12: error: too many arguments for method pentaKoch: (levels: Int, length: Double)Unit
	pentaKoch(levels-1,length*0,4);
                 ^PentaKoch:14: error: too many arguments for method pentaKoch: (levels: Int, length: Double)Unit
	pentaKoch(levels-1,length*0,4);
                 ^PentaKoch:16: error: too many arguments for method pentaKoch: (levels: Int, length: Double)Unit
	pentaKoch(levels-1,length*0,4);
                 ^